Linting and docs